<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">urBooks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login page strings -->
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>

    <!-- Sign Up page strings -->
    <string name="signup_title">Sign up to urBooks!</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="contact_info">Contact Information:</string>
    <string name="username_and_password">Username and Password:</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_home_screen">Home</string>
    <string name="title_activity_capture_barcode">Capture Barcode</string>
    <string name="title_activity_login_success">Login Success</string>

    <!-- Home Screen strings -->
    <string name="button_wanted">Wishlist</string>
    <string name="button_owned">My Books</string>
    <string name="button_account">User Account</string>
    <string name="button_search">Search</string>
    <string name="button_auto_search">Scan Barcode</string>
    <string name="button_confirm">Confirm</string>
    <string name="add_new_books">Add New?</string>

    <!-- Capture Barcode strings -->
    <string name="button_camera">Take Picture</string>
    <string name="isbn_label">ISBN:  </string>
    <string name="barcode_image">Captured Barcode</string>
    <string name="title_activity_manual_search">Search</string>
    <string name="title_activity_search_results">Search Results</string>

    <!-- Manual Search strings -->
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_year">Year</string>
    <string name="book_isbn">ISBN</string>

    <!-- Custom List layout strings (layout_search_results.xml) -->
    <string name="image_cover">Cover</string>
    <string name="title_activity_insert_book">Insert Book</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_wanted_list">Wishlist</string>
    <string name="title_activity_owned_list">My Books</string>
    <string name="text_confirm_selection">Please confirm your selection:</string>
    <string name="text_transaction_options">Transaction options selected list:</string>
    <string name="text_wanted_obtain">How would you like to obtain this book?</string>
    <string name="text_keep_or_exchange">Would you like to keep or exchange your book?</string>
    <string name="text_owned_obtain">How would you like to exchange your book?</string>
    <string name="text_options_helper">Note: One or more options can be selected.</string>
    <string name="text_select_an_option">Please select an option:</string>
    <string name="text_want_this_book">I want this book.</string>
    <string name="text_own_this_book">I own this book.</string>
    <string name="text_wanted">Wanted</string>
    <string name="text_owned">Owned</string>
    <string name="text_keep">Keep</string>
    <string name="text_trade">Trade</string>
    <string name="text_sell">Sell:</string>
    <string name="text_purchase">Purchase:</string>
    <string name="text_exchange">Exchange</string>
    <string name="sort_title_asc">Sort: Title (A-Z)</string>
    <string name="sort_title_dsc">Sort: Title (Z-A)</string>
    <string name="sort_year_asc">Sort: Year ASC</string>
    <string name="sort_year_dsc">Sort: Year DESC</string>
    <string name="sort_author_asc">Sort: Author (A-Z)</string>
    <string name="sort_author_dsc">Sort: Author (Z-A)</string>
    <string name="text_your">Your…</string>
    <string name="text_for_their">For their…</string>
    <string name="text_money_placeholder">$999.99</string>
    <string name="title_activity_matched_user_information">MatchedUserInformation</string>
    <string name="title_activity_matched_user_account">MatchedUserAccount</string>
    <string name="text_filter">Filter results…</string>
    <string name="button_transactions">View Matches</string>
    <string name="title_activity_owned_list_item_change">Edit Book</string>
    <string name="title_activity_wanted_list_item_change">Edit Book</string>
</resources>