<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.urbookproject.WantedList">

    <item
        android:id="@+id/wanted_list_title_asc"
        android:orderInCategory="100"
        android:title="@string/sort_title_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/wanted_list_title_dsc"
        android:orderInCategory="100"
        android:title="@string/sort_title_dsc"
        app:showAsAction="never" />
    <item
        android:id="@+id/wanted_list_author_asc"
        android:orderInCategory="100"
        android:title="@string/sort_author_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/wanted_list_author_dsc"
        android:orderInCategory="100"
        android:title="@string/sort_author_dsc"
        app:showAsAction="never" />
    <item
        android:id="@+id/wanted_list_year_asc"
        android:orderInCategory="100"
        android:title="@string/sort_year_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/wanted_list_year_dsc"
        android:orderInCategory="100"
        android:title="@string/sort_year_dsc"
        app:showAsAction="never" />

</menu>
