<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.urbookproject.Signup">

    <ScrollView
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.05"></RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.9">

                <LinearLayout
                    android:id="@+id/signup_form"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/signup_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/signup_title"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <LinearLayout
                        android:id="@+id/contact_info"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_contact_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_info"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/signup_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:hint="@string/signup_firstname"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/signup_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:hint="@string/signup_lastname"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/signup_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:hint="@string/signup_email"
                            android:inputType="textEmailAddress" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/username_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_user_and_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username_and_password"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/signup_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:hint="@string/username" />

                        <EditText
                            android:id="@+id/signup_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/signup_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/sign_up"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.05"></RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
