<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.urbookproject.OwnedListItemChange">

    <ScrollView
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_border">

                <TextView
                    android:id="@+id/change_owned_book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/book_title"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/lin1"
                    android:layout_width="wrap_content"
                    android:layout_height="175dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/horizontal_bar"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="10dp">

                    <ImageView
                        android:id="@+id/change_owned_book_cover"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:adjustViewBounds="true"
                        android:padding="1dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_launcher" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Current preferences:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/change_owned_keep_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Keep: "
                            android:textSize="12sp"
                            android:typeface="monospace" />

                        <TextView
                            android:id="@+id/change_owned_trade_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Trade: "
                            android:textSize="12sp"
                            android:typeface="monospace" />

                        <TextView
                            android:id="@+id/change_owned_sell_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sell: "
                            android:textSize="12sp"
                            android:typeface="monospace" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/change_owned_book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/lin1"
                    android:layout_alignStart="@+id/lin1"
                    android:layout_below="@+id/lin1"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_toLeftOf="@+id/change_owned_book_year"
                    android:layout_toStartOf="@+id/change_owned_book_year"
                    android:ellipsize="end"
                    android:maxEms="20"
                    android:maxLines="2"
                    android:paddingBottom="2dp"
                    android:text="@string/book_author"
                    android:textColor="#808080"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/change_owned_book_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/lin1"
                    android:layout_marginBottom="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:ellipsize="end"
                    android:maxEms="20"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:text="@string/book_year"
                    android:textColor="#808080"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:visibility="visible" />

                <View
                    android:id="@+id/horizontal_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/change_owned_book_title"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/darker_gray" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_keep_or_exchange"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_change_owned_keep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onOptionKeepExchangeClick"
                        android:text="@string/text_keep" />

                    <RadioButton
                        android:id="@+id/radio_change_owned_exchange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:onClick="onOptionKeepExchangeClick"
                        android:text="@string/text_exchange" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/linear_change_owned_exchange"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_owned_obtain"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/checkbox_change_owned_trade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_trade" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/checkbox_change_owned_sell"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckboxClick"
                            android:text="@string/text_sell" />

                        <EditText
                            android:id="@+id/edit_change_text_sell"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:ems="10"
                            android:enabled="false"
                            android:inputType="numberDecimal" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_options_helper"
                        android:textColor="#808080"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_confirm_selection"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/change_owned_select"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:text="@string/button_confirm" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
